// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarPlaceholder uses a default value when the did prop is not provided 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="20"
    role="img"
    viewBox="0 0 80 80"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      self.id
    </title>
    <mask
      height="80"
      id="mask__marble"
      maskUnits="userSpaceOnUse"
      width="80"
      x="0"
      y="0"
    >
      <rect
        fill="#FFFFFF"
        height="80"
        rx="160"
        width="80"
      />
    </mask>
    <g
      mask="url(#mask__marble)"
    >
      <rect
        fill="#228DFF"
        height="80"
        width="80"
      />
      <path
        d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
        fill="#BA01FF"
        filter="url(#prefix__filter0_f)"
        transform="translate(-2 2) rotate(-226 40 40) scale(1.5)"
      />
      <path
        d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
        fill="#FF0092"
        filter="url(#prefix__filter0_f)"
        style="mix-blend-mode: overlay;"
        transform="translate(7 7) rotate(159 40 40) scale(1.5)"
      />
    </g>
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="userSpaceOnUse"
        id="prefix__filter0_f"
      >
        <feflood
          flood-opacity="0"
          result="BackgroundImageFix"
        />
        <feblend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          result="shape"
        />
        <fegaussianblur
          result="effect1_foregroundBlur"
          stdDeviation="7"
        />
      </filter>
    </defs>
  </svg>
</DocumentFragment>
`;

exports[`AvatarPlaceholder uses the provided did and size props 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="32"
    role="img"
    viewBox="0 0 80 80"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      did:test:123
    </title>
    <mask
      height="80"
      id="mask__marble"
      maskUnits="userSpaceOnUse"
      width="80"
      x="0"
      y="0"
    >
      <rect
        fill="#FFFFFF"
        height="80"
        rx="160"
        width="80"
      />
    </mask>
    <g
      mask="url(#mask__marble)"
    >
      <rect
        fill="#228DFF"
        height="80"
        width="80"
      />
      <path
        d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
        fill="#BA01FF"
        filter="url(#prefix__filter0_f)"
        transform="translate(-6 -6) rotate(-46 40 40) scale(1.3)"
      />
      <path
        d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
        fill="#FF0092"
        filter="url(#prefix__filter0_f)"
        style="mix-blend-mode: overlay;"
        transform="translate(-1 1) rotate(-249 40 40) scale(1.3)"
      />
    </g>
    <defs>
      <filter
        color-interpolation-filters="sRGB"
        filterUnits="userSpaceOnUse"
        id="prefix__filter0_f"
      >
        <feflood
          flood-opacity="0"
          result="BackgroundImageFix"
        />
        <feblend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          result="shape"
        />
        <fegaussianblur
          result="effect1_foregroundBlur"
          stdDeviation="7"
        />
      </filter>
    </defs>
  </svg>
</DocumentFragment>
`;
